--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-    <h1>Your Name</h1>
-    <nav>
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-    </nav>
-</header>
-
+    <div id="header-placeholder"></div>
 <main>
     <section id="about">
         <h2>About</h2>
@@ -44,5 +36,6 @@
     </p>
 </section>
 </main>
+<script src="script.js"></script>
 </body>
 </html>
