add project page

--- a/projects/project1.html
+++ b/projects/project1.html
@@ -28,6 +28,7 @@
             
             <h3>Details</h3>
             <p>Full project description here. Can include multiple paragraphs, images, links, etc.</p>
+            <p>More text</p>
         </article>
     </main>
     
