many updates to many things, should commit before things get out of hand

--- a/blog.html
+++ b/blog.html
@@ -10,8 +10,11 @@
 <div id="header-placeholder"></div>
 <script src="script.js"></script>
     <main>
-        <h2>Blog</h2>
-        <p>Blog posts will go here.</p>
+        <h2>the thoughtzone</h2>
+        <p>blog posts will go here: maybe in a card layout?</p>
+        <p>ideally they would just appear in reverse chronological order and maybe have some filtering features
+            for posts about gamedev, game reviews, etc etc etc
+        </p>
     </main>
 </body>
 </html>
