--- a/projects.html
+++ b/projects.html
@@ -13,9 +13,8 @@
     <aside class="sidebar">
         <h2>Projects</h2>
         <nav class="project-list">
-            <a href="projects/project1.html">Project One</a>
-            <a href="projects/project2.html">Project Two</a>
-            <a href="projects/project3.html">Project Three</a>
+            <a href="projects/project1.html">da thesis</a>
+            <a href="projects/project2.html">imagine a project if you will</a>
         </nav>
     </aside>
     
