--- a/header.html
+++ b/header.html
@@ -1,9 +1,18 @@
-<header>
-    <h1>Your Name</h1>
-    <nav>
-    <a href="/portfolio/index.html">Home</a>
-    <a href="/portfolio/projects.html">Projects</a>
-    <a href="/portfolio/blog.html">Blog</a>
-    <a href="/portfolio/index.html#contact">Contact</a>
+<!-- Top Navigation -->
+<nav class="top-nav">
+    <div class="logo">Z</div>
+    
+    <ul class="nav-links">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html#projects">Featured Gallery</a></li>
+        <li><a href="projects.html">All Projects</a></li>
+        <li><a href="blog.html">Blog</a></li>
+    </ul>
+    
+    <div class="nav-controls">
+        <div class="theme-switch">
+            <button class="theme-option active" data-theme="light">☀️</button>
+            <button class="theme-option" data-theme="dark">🌙</button>
+        </div>
+    </div>
 </nav>
-</header>
