slowly coming together

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Z Sarkissian</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="gallery.css">
 </head>
 <body>
     <div id="header-placeholder"></div>
@@ -56,16 +57,14 @@
         <div id="project-gallery-placeholder"></div>
     </div>
 </section>
-    
-    <section id="contact">
-    <h2>Contact</h2>
-    <p>
-        <a href="mailto:zgsarkiss@gmail.com">Email</a> • 
-        <a href="https://github.com/diverdrown">GitHub</a> • 
-        <a href="https://www.linkedin.com/in/z-sarkissian-083146237/">LinkedIn</a> • 
-        <a href="https://betaversions.itch.io">Itch.io</a>
-    </p>
-</section>
+
+<!-- Skills Section -->
+<section id="skills">
+    <div class="section-content animated">
+        <h2 class="section-title">Skills & Expertise</h2>
+        <div id="skills-placeholder">
+        </div>
+    </section>
 </main>
 <script src="script.js"></script>
 </body>
