reorganized structure, added more elements, base of main page complete!

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Z Sarkissian</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="gallery.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/gallery.css">
+    <link rel="stylesheet" href ="css/skills.css">
+    <link rel="stylesheet" href="css/about.css">
 </head>
 <body>
     <div id="header-placeholder"></div>
@@ -63,9 +65,17 @@
     <div class="section-content animated">
         <h2 class="section-title">Skills & Expertise</h2>
         <div id="skills-placeholder">
-        </div>
-    </section>
+    </div>
+</section>
+    <!-- About Section -->
+<section id="about">
+    <div class="about-container animated">
+        <h2 class="section-title">About Me</h2>
+
+        <div id="about-placeholder"></div>
+
+</section>
 </main>
-<script src="script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
