--- a/pages/projects.html
+++ b/pages/projects.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="header-placeholder"></div>
-<script src="script.js"></script>
+<script src="/js/script.js"></script>
 <main class="two-column-layout">
     <aside class="sidebar">
         <h2>Projects</h2>
@@ -22,6 +22,7 @@
         <h2>Select a project</h2>
         <p>Click a project from the sidebar to view details.</p>
     </section>
+
 </main>
 </body>
 </html>
