--- a/pages/blog.html
+++ b/pages/blog.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="header-placeholder"></div>
-<script src="script.js"></script>
+<script src="/js/script.js"></script>
     <main>
         <h2>the thoughtzone</h2>
         <p>blog posts will go here: maybe in a card layout?</p>
