updating all site files with most recent versions

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="css/gallery.css">
     <link rel="stylesheet" href ="css/skills.css">
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/header.css">
+
 </head>
 <body>
     <div id="header-placeholder"></div>
 <main>
-    <!-- Hero Section -->
 <section id="home" class="hero">
     <div class="section-content animated">
         <div class="brutal-window">
@@ -31,7 +32,6 @@
                     I'm a game designer who specializes in level design and gameplay systems, and I'm diving deeper into shader programming and tech art. I learn fast and love tackling problems across disciplines—environmental storytelling, Blueprint scripting, post-processing, whatever needs solving.
                 </p>
                 <a href="#projects" class="cta-button">Explore My Work</a>
-                
                 <div class="social-links">
                     <a href="mailto:zgsarkiss@gmail.com" class="social-link">
                         <span>Email</span> 
@@ -51,29 +51,23 @@
     </div>
 </section>
     
-<!-- Projects Section -->
 <section id="projects">
     <div class="projects-container animated">
         <h2 class="section-title">Featured Projects</h2>
-        <!-- This is where the gallery goes - we'll add it in the next step -->
         <div id="project-gallery-placeholder"></div>
     </div>
 </section>
 
-<!-- Skills Section -->
 <section id="skills">
     <div class="section-content animated">
         <h2 class="section-title">Skills & Expertise</h2>
-        <div id="skills-placeholder">
-    </div>
+        <div id="skills-placeholder"></div>
 </section>
-    <!-- About Section -->
+
 <section id="about">
     <div class="about-container animated">
         <h2 class="section-title">About Me</h2>
-
         <div id="about-placeholder"></div>
-
 </section>
 </main>
 <script src="js/script.js"></script>
