--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,26 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Your Name</title>
-    <link rel="stylesheet" href="style.css">
+    <title>All Projects</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/projects.css">
+    <link rel="stylesheet" href="../css/header.css">
 </head>
 <body>
-<div id="header-placeholder"></div>
-<script src="/js/script.js"></script>
-<main class="two-column-layout">
-    <aside class="sidebar">
-        <h2>Projects</h2>
-        <nav class="project-list">
-            <a href="projects/project1.html">da thesis</a>
-            <a href="projects/project2.html">imagine a project if you will</a>
-        </nav>
-    </aside>
-    
-    <section class="content-area">
-        <h2>Select a project</h2>
-        <p>Click a project from the sidebar to view details.</p>
-    </section>
+    <div id="header-placeholder"></div>
 
-</main>
+    <main>
+        <section id="all-projects">
+            <div class="section-content animated">
+                <h2 class="section-title">All Projects</h2>
+                
+                <!-- Filter Bar -->
+                <div class="filter-bar">
+                    <button class="filter-btn active" data-filter="all">All Projects</button>
+                    <button class="filter-btn" data-filter="games">Games</button>
+                    <button class="filter-btn" data-filter="tools">Tools</button>
+                    <button class="filter-btn" data-filter="tabletop">Tabletop</button>
+                </div>
+
+                <!-- Projects Grid -->
+                <div class="projects-grid" id="projects-grid">
+                   <!-- Example Project Card -->
+                    <a href="project-detail.html" class="project-card" data-category="games">
+                        <div class="card-titlebar">
+                            <span>IN_THE_LIGHT.EXE</span>
+                        </div>
+                        <div class="card-image">
+                            <img src="../images/ugly stinky guy.png" alt="In The Light">
+                        </div>
+                        <div class="card-content">
+                            <h3 class="card-title">In The Light</h3>
+                            <div class="card-tags">
+                                <span class="meta-tag">Level Design</span>
+                                <span class="meta-tag">Horror</span>
+                                <span class="meta-tag">Narrative Design</span>
+                                <span class="meta-tag">Unreal Engine 5</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <script src="../js/script.js"></script>
 </body>
 </html>
