the great variable-ization, and also polishing up the toggle mode button, still a few bits of squeaky polish to add

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="window-controls">
                     <button class="window-btn minimize">_</button>
                     <button class="window-btn maximize">□</button>
-                    <button class="window-btn close">×</button>
+                    <button class="window-btn close">X</button>
                 </div>
             </div>
             <div class="window-content">
