full site skeleton ready for content, not including blog section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href ="css/skills.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/micro.css">
 
 </head>
 <body>
@@ -51,20 +52,20 @@
     </div>
 </section>
     
-<section id="projects">
+<section id="projects" class="projects">
     <div class="projects-container animated">
         <h2 class="section-title">Featured Projects</h2>
         <div id="project-gallery-placeholder"></div>
     </div>
 </section>
 
-<section id="skills">
+<section id="skills" class="skills">
     <div class="section-content animated">
         <h2 class="section-title">Skills & Expertise</h2>
         <div id="skills-placeholder"></div>
 </section>
 
-<section id="about">
+<section id="about" class="about">
     <div class="about-container animated">
         <h2 class="section-title">About Me</h2>
         <div id="about-placeholder"></div>
