--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/projects.css">
     <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/micro.css">
+
 </head>
 <body>
     <div id="header-placeholder"></div>
@@ -14,9 +16,7 @@
     <main>
         <section id="all-projects">
             <div class="section-content animated">
-                <h2 class="section-title">All Projects</h2>
-                
-                <!-- Filter Bar -->
+                <h2 class="section-title">All Projects</h2>  
                 <div class="filter-bar">
                     <button class="filter-btn active" data-filter="all">All Projects</button>
                     <button class="filter-btn" data-filter="games">Games</button>
@@ -24,10 +24,8 @@
                     <button class="filter-btn" data-filter="tabletop">Tabletop</button>
                 </div>
 
-                <!-- Projects Grid -->
                 <div class="projects-grid" id="projects-grid">
-                   <!-- Example Project Card -->
-                    <a href="project-detail.html" class="project-card" data-category="games">
+                    <a href="../projects/InTheLight.html" class="project-card" data-category="games">
                         <div class="card-titlebar">
                             <span>IN_THE_LIGHT.EXE</span>
                         </div>
