full base site built

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -3,18 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Your Name</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Blog - Z Sarkissian</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/micro.css">
 </head>
 <body>
-<div id="header-placeholder"></div>
-<script src="/js/script.js"></script>
+    <div id="header-placeholder"></div>
+
     <main>
-        <h2>the thoughtzone</h2>
-        <p>blog posts will go here: maybe in a card layout?</p>
-        <p>ideally they would just appear in reverse chronological order and maybe have some filtering features
-            for posts about gamedev, game reviews, etc etc etc
-        </p>
+        <section class="hero">
+            <div class="section-content animated">
+                <div class="brutal-window">
+                    <div class="window-titlebar">
+                        <span class="window-title">BLOG_CONSTRUCTION.EXE</span>
+                        <div class="window-controls">
+                            <button class="window-btn minimize">_</button>
+                            <button class="window-btn maximize">□</button>
+                            <button class="window-btn close">X</button>
+                        </div>
+                    </div>
+                    <div class="window-content">
+                        <h1 style="font-size: clamp(2rem, 6vw, 4rem);">Under Construction</h1>
+                        <p class="subtitle">Building something cool here</p>
+                        <p class="intro">
+                            The blog is currently in development. Check back soon for posts about game design, 
+                            technical breakdowns, project postmortems, and general thoughts on making things.
+                        </p>
+                        <a href="../index.html" class="cta-button">← Back to Home</a>
+                        
+                        <div class="social-links" style="margin-top: var(--space-5);">
+                            <a href="../index.html#projects" class="social-link">
+                                <span>View Projects</span>
+                            </a>
+                            <a href="../index.html#about" class="social-link">
+                                <span>About Me</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <script src="../js/script.js"></script>
 </body>
 </html>
